--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h2>안녕하세요</h2>
     <a href="/member/save">회원가입</a>
-    <a href="/member/login">로그인</a>
+    <a href="/login">로그인</a>
 
 </body>
 </html>
