refactor: 게시글 등록 메서드 로직 전체 수정 및 HTTP URL/파일명 정리

--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <h4 class="text-center mt-5">새 글 작성</h4>
-                <form th:action="@{/api/post}" method="post" th:object="${post}" class="text-center col-lg-10 mx-auto mt-4" enctype="multipart/form-data">
+                <form th:action="@{/post}" method="post" th:object="${post}" class="text-center col-lg-10 mx-auto mt-4" enctype="multipart/form-data">
                     <!-- 등록 버튼 -->
                     <button type="submit" class="btn btn-dark btn-sm mr-1 mb-3 shadow-sm float-right">+ 등록</button>
                     <!-- 제목 입력란 -->
