--- a/src/main/resources/templates/postList.html
+++ b/src/main/resources/templates/postList.html
@@ -49,7 +49,7 @@
                 <div class="d-flex justify-content-between">
                     <h6 class="text-left mb-4 mt-5 fs-6 ">💬소통게시판</h6>
                     <div class="text-center mt-5 mr-5 ">
-                        <a href="/articles/new" class="btn btn-dark btn-sm mr-5 shadow-sm">+ 글쓰기</a>
+                        <a href="/post/new" class="btn btn-dark btn-sm mr-5 shadow-sm">+ 글쓰기</a>
                     </div>
                 </div>
 
