--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>테스트용 로그인 창 (Test Login Form)</title>
-    <link  rel="stylesheet" type="text/css" href="./css/default-ui.css"  />
-  </head>
-  <body>
-    <div class="content">
-      <form class="login-form" method="post" action="/login">
-        <h2>테스트용 로그인 창</h2>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>로그인</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/signup.css" />
+</head>
 
-        <p>
-          <label for="username" class="screenreader">Username</label>
-          <input type="text" id="username" name="username" placeholder="Username" required autofocus>
-        </p>
-        <p>
-          <label for="password" class="screenreader">Password</label>
-          <input type="password" id="password" name="password" placeholder="Password" required>
-        </p>
-        <button type="submit" class="primary">Sign in</button>
-      </form>
+<body class="bg-light py-5">
+
+<!-- 상단 네비게이션 -->
+<div class="container text-dark col-lg-8" style="min-width: 400px;">
+    <div class="container-fluid bg-white text-white p-4 rounded shadow-sm mb-5">
+        <div class="d-flex justify-content-between align-items-center">
+            <h2 class="text-dark mb-0">RUNTIME</h2>
+            <div class="d-flex align-items-center">
+                <button type="button" class="btn btn-nav" onclick="location.href='/member/save'">회원가입</button>
+            </div>
+        </div>
     </div>
-  </body>
+</div>
+
+<!-- 로그인 폼 -->
+<div class="signup-container">
+    <form action="/login" method="post">
+        <div class="signup-title">로그인</div>
+
+        <div class="form-group mb-4">
+            <label for="username">이메일</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="이메일을 입력하세요" required autofocus>
+        </div>
+
+        <div class="form-group mb-4">
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호를 입력하세요" required>
+        </div>
+
+
+        <div class="text-center">
+            <button type="submit" class="btn btn-signup">로그인</button>
+        </div>
+    </form>
+</div>
+
+</body>
 </html>
