feat : viewcontroller에서 post 로직 삭제 js 사용하여 restcontroller post 호출

--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,8 +79,9 @@
                 </div>
 
                 <h4 class="text-center mt-5">새 글 작성</h4>
-                <form th:action="@{/post}" method="post" th:object="${post}" class="text-center col-lg-10 mx-auto mt-4" enctype="multipart/form-data">
-                    <!-- 등록 버튼 -->
+                <form id="postForm" th:object="${post}" action="" method="post" class="text-center col-lg-10 mx-auto mt-4" enctype="multipart/form-data">
+
+                <!-- 등록 버튼 -->
                     <button type="submit" class="btn btn-dark btn-sm mr-1 mb-3 shadow-sm float-right">+ 등록</button>
                     <!-- 제목 입력란 -->
                     <div class="form-group">
@@ -107,12 +108,13 @@
                         <!-- 텍스트 영역 -->
                         <textarea th:field="*{content}" class="form-control mb-5" rows="14" placeholder="내용을 입력하세요"></textarea>
                     </div>
-
                 </form>
+
             </div>
         </div>
     </div>
 </div>
 <script src="/js/previewImage.js"></script>
+<script src="/js/fetch.js"></script>
 </body>
 </html>
