--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -55,18 +55,24 @@
           </div>
         <div class="container my-5">
           <div class="card shadow-sm mr-5">
+
+
             <div class="card-header d-flex justify-content-between align-items-center">
-              <span class="fw-bold fs-4" th:text="${post.title}">게시글 제목</span>
+              <span class="fw-bold fs-4" th:text="${post.title}" id="postTitleText">게시글 제목</span>
+              <input type="text" class="form-control d-none" id="postTitleInput" value="[[${post.title}]]" />
               <div>
-                <a th:href="@{/post/edit/{id}(id=${post.id})}" class="btn btn-secondary text-white me-2 mr-1 btn-sm">수정</a>
-                <form th:action="@{/post/delete/{id}(id=${post.id})}" method="post" class="d-inline">
-                  <button type="submit" class="btn btn-secondary mr-0 btn-sm">삭제</button>
-                </form>
+                <a th:href="@{/post/new(id=${post.id})}" class="btn btn-secondary text-white me-2 mr-1 btn-sm">수정</a>
+                <button class="btn btn-secondary btn-sm" id="deletePostBtn" th:attr="data-post-id=${post.id}">삭제</button>
+                <button class="btn btn-primary btn-sm d-none" id="savePostBtn">저장</button>
               </div>
             </div>
 
             <div class="card-body">
-              <p class="card-text " th:text="${post.content}">본문 내용</p>
+              <p class="card-text" th:text="${post.content}" id="postContentText">본문 내용</p>
+              <textarea class="form-control d-none" id="postContentInput">[[${post.content}]]</textarea>
+            </div>
+
+
 
               <div th:if="${post.images != null and !post.images.isEmpty()}" class="mt-4">
                 <div class="row g-3">
@@ -83,21 +89,21 @@
 
 
 
-            <div class="card-footer text-end">
-              <div class="mt-4">
-                <div th:each="comment : ${post.comments}" class="d-flex mb-3">
-                  <div class="comment-bubble p-2" style="background-color: #f0f0f0; border-radius: 15px; max-width: 80%; word-wrap: break-word;">
-                    <p th:text="${comment.text}">댓글 내용</p>
-                  </div>
-                </div>
-              </div>
-              <div class="d-flex w-100">
-                <!-- 왼쪽: 댓글 작성 공간 -->
-                <div class="d-flex w-100">
-    <textarea class="form-control me-2 w-100" id="commentText" rows="2" placeholder="댓글을 입력하세요..."
-              style="border-radius: 0px; border: 1px solid #ccc;"></textarea>
-                  <button type="submit" class="btn btn-primary btn-sm" id="submitComment">등록</button>
-                </div>
+<!--            <div class="card-footer text-end">-->
+<!--              <div class="mt-4">-->
+<!--                <div th:each="comment : ${post.comments}" class="d-flex mb-3">-->
+<!--                  <div class="comment-bubble p-2" style="background-color: #f0f0f0; border-radius: 15px; max-width: 80%; word-wrap: break-word;">-->
+<!--                    <p th:text="${comment.text}">댓글 내용</p>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--              <div class="d-flex w-100">-->
+<!--                &lt;!&ndash; 왼쪽: 댓글 작성 공간 &ndash;&gt;-->
+<!--                <div class="d-flex w-100">-->
+<!--    <textarea class="form-control me-2 w-100" id="commentText" rows="2" placeholder="댓글을 입력하세요..."-->
+<!--              style="border-radius: 0px; border: 1px solid #ccc;"></textarea>-->
+<!--                  <button type="submit" class="btn btn-primary btn-sm" id="submitComment">등록</button>-->
+<!--                </div>-->
 
                 <!-- 오른쪽: 댓글 등록 버튼 -->
 
@@ -115,5 +121,6 @@
     </div>
   </div>
 </div>
+<script src="/js/post.js"></script>
 </body>
 </html>
