chore: 목록 버튼 클릭 URL 수정

--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -47,7 +47,7 @@
         <div class="d-flex justify-content-between">
           <h6 class="text-left mb-4 mt-5 fs-6 ">💬소통게시판</h6>
           <div class="text-center mt-5 mr-5 ">
-            <a href="/api/post" class="btn btn-dark mr-4">목록</a>
+            <a href="/post" class="btn btn-dark mr-4">목록</a>
           </div>
 
 
