--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -50,13 +50,7 @@
 <section layout:fragment="main">
     <div class="row">
         <!-- 사이드바 -->
-        <div class="col-md-3 pt-4">
-            <h5 class="pl-3">RUNTIME</h5><br>
-            <a href="#" class="text-dark pl-3">🏠 홈</a><br><br>
-            <a href="#" class="text-dark pl-3">📄 공지사항</a><br><br>
-            <a href="#" class="text-dark pl-3">💬 소통게시판</a><br><br>
-            <a href="#" class="text-dark pl-3">🤝 크루게시판</a><br><br>
-        </div>
+        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
 
         <!-- 본문 -->
         <div class="col-md-9 pt-4">
