--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -43,12 +43,12 @@
             <div class="d-flex justify-content-between">
                 <h6 class="text-left mb-4 mt-5 fs-6">💬소통게시판</h6>
                 <div class="text-center mt-5 mr-5">
-                    <a href="/post" class="btn btn-dark mr-4">목록</a>
+                    <a href="/post" class="btn btn-dark btn-sm shadow-sm">목록</a>
                 </div>
             </div>
 
-            <div class="container my-5">
-                <div class="card shadow-sm mr-5">
+            <div class="container my-5 ml-2">
+                <div class="card shadow-sm mr-3">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <span class="fw-bold fs-4" th:text="${post.title}" id="postTitleText">게시글 제목</span>
                         <input type="text" class="form-control d-none" id="postTitleInput" value="[[${post.title}]]" />
