--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -5,6 +5,7 @@
       layout:decorate="~{layout/layout}">
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
     <style>
         #imagePreview img {
