feat: 좋아요 버튼 추가

--- a/src/main/resources/templates/postList.html
+++ b/src/main/resources/templates/postList.html
@@ -4,6 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
+<meta charset="UTF-8">
 <section layout:fragment="main">
     <div class="row mt-0">
 
