--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -31,7 +31,7 @@
 
     <!--상단 헤더 박스 -->
     <div class="custom-box">
-        <div th:replace="fragments/header :: headerFragment"></div>
+        <div th:replace="~{fragments/header :: headerFragment}"></div>
     </div>
 
     <!--본문 박스 -->
