--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,6 +1,6 @@
 <div th:fragment="sidebarFragment">
     <div class="col-md-3 pt-4" style="white-space: nowrap;">
-        <a href="#" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
+        <a href="/index" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
             <span class="mr-2" style="font-size: 1.2rem;">🏠</span>
             <span>홈</span>
         </a>
