--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -4,15 +4,15 @@
             <span class="mr-2" style="font-size: 1.2rem;">🏠</span>
             <span>홈</span>
         </a>
-        <a href="#" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
+        <a href="/post?board=1" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
             <span class="mr-2" style="font-size: 1.2rem;">📄</span>
             <span>공지사항</span>
         </a>
-        <a href="#" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
+        <a href="/post?board=2" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
             <span class="mr-2" style="font-size: 1.2rem;">💬</span>
             <span>소통게시판</span>
         </a>
-        <a href="#" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
+        <a href="/post?board=3" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
             <span class="mr-2" style="font-size: 1.2rem;">🤝</span>
             <span>크루게시판</span>
         </a>
