feat: 개별 페이지별 스크립트 삽입을 위한 layout:fragment pageScript 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -40,6 +40,8 @@
     </div>
 
     <script src="/js/loginStatus.js"></script>
+    <div layout:fragment="pageScript"></div>
+
 </div>
 </body>
 </html>
