fix: Thymeleaf th:replace 문법 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 
 <section layout:fragment="main">
     <div class="row mt-0">
-        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
 
         <div class="col-md-9 pt-4 bg-white">
 
