--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -11,7 +11,7 @@
         <div class="row">
             <!-- 사이드바 (왼쪽) -->
             <div class="col-md-3">
-                <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+                <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
             </div>
 
             <!-- 본문 (오른쪽) -->
