--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -51,7 +51,7 @@
 <section layout:fragment="main">
     <div class="row">
 
-        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
 
         <div class="col-md-9 pt-4">
             <div class="d-flex justify-content-between">
