--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -8,7 +8,7 @@
 <body>
 <section layout:fragment="main">
     <div class="row mt-0">
-        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
         <div class="col-md-9 pt-4">
             <div class="d-flex justify-content-between mb-3">
                 <div>
