--- a/src/main/resources/templates/postList.html
+++ b/src/main/resources/templates/postList.html
@@ -8,7 +8,7 @@
 <section layout:fragment="main">
     <div class="row mt-0 pr-1 mr-0">
 
-        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
 
         <div class="col-md-9 pr-4 pl-4 ml-3 pt-4 bg-white">
             <div class="d-flex justify-content-between mb-3">
