--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -80,7 +80,7 @@
 <section layout:fragment="main">
     <div class="row mt-0">
         <!-- 사이드바 -->
-        <div th:replace="fragments/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{fragments/sidebar :: sidebarFragment}"></div>
 
         <!-- 본문 -->
         <div class="col-md-9 pt-4 bg-white">
